Fix logic traversing all comments and updating the queue with posts that needed re-check